k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-angular
  namespace: <[usuario]>
  labels:
    app: k8s-angular
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-angular
  template:
    metadata:
      labels:
        app: k8s-angular
    spec:
      containers:
        - name: k8s-angular
          image: <[usuario]>/k8s-angular:0.0.1
          volumeMounts:
            - name: config
              mountPath: /usr/share/nginx/html/assets/config
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
      volumes:
        - name: config
          configMap:
            name: k8s-angular-config
