k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: k8s-angular-svc
  namespace: raguilera82
  labels:
    app: k8s-angular
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: k8s-angular
