k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-angular-ing-k8s
  namespace: raguilera82
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: "raguilera82.kloudteto.kairosds.com"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: k8s-angular-svc
                port:
                  number: 80
