k8s/local-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-angular-ing-k8s
  namespace: <[usuario]>
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
        - k8sangular.local.com
      secretName: tls-secret
  rules:
    - host: "k8sangular.local.com"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: k8s-angular-svc
                port:
                  number: 80
